gl33-master/src/test/deca/context/invalid/other/retourIncompatible8.deca
// Test de contexte invalide : valeur de retour fausse (string au lieu de boolean)

class MyClass{

    boolean isPos(int a){
      if(a > 0){
        return "true";
        }
      else{
        return "false";
        }
    }
}

{
    MyClass m = new MyClass();
    boolean x = m.isPos(4);
}
